chore: update .env.template

--- a/.env.template
+++ b/.env.template
@@ -2,15 +2,18 @@ DISCORD_BOT_TOKEN=
 
 DISCORD_DEV_SERVER_ID=
 
-DATABASE_URL=
+OPENAI_API_KEY=
+
+# Database
+
+## QDrant
+QDRANT_ADDRESS=
+QDRANT_PORT=
 
 
+## Milvus (not implemented, ignore for now)
 
-####################
-# DISCORD_CLIENT_ID=
-# DISCORD_CLIENT_SECRET=
-# DISCORD_APP_ID=
-# DISCORD_PUBLIC_KEY=
-
-### OpenAI
-# OPENAI_API_KEY=
+# MILVUS_ADDRESS=localhost
+# MILVUS_USERNAME=
+# MILVUS_PASSWORD=
+# MILVUS_SSL=
