chore: add some clarifications in .env.template

--- a/.env.template
+++ b/.env.template
@@ -1,12 +1,12 @@
+# Only these 3 are required
 DISCORD_BOT_TOKEN=
-
 DISCORD_DEV_SERVER_ID=
-
 OPENAI_API_KEY=
+
 
 # Database
 
-## QDrant
+## Qdrant (can be empty, defaults are set)
 QDRANT_ADDRESS=
 QDRANT_PORT=
 
